--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,4 +36,5 @@ services:
       - kafka
       - redis
     # Command can be adjusted based on which script you want to run (producer or consumer)
-    command: python3 /app/device-simulator.py
+    #command: python3 /app/device-simulator.py
+    command:  tail -f /dev/null
