--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
   kafka:
     image: docker.io/apache/kafka
     hostname: kafka
+    networks:
+     - network1
     container_name: kafka
     ports:
       - "9092:9092"
@@ -40,6 +42,8 @@ services:
   # ----------------------------------------
   python_app:
     image: data-simulator
+    networks:
+     - network1
     container_name: device-data-simulator
     # The application starts after Kafka and Redis are ready
     depends_on:
@@ -48,3 +52,6 @@ services:
     # Command can be adjusted based on which script you want to run (producer or consumer)
     #command: python3 /app/device-simulator.py
     command:  tail -f /dev/null
+
+networks:
+ network1:
