--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,17 +12,33 @@ services:
     container_name: kafka
     ports:
       - "9092:9092"
-    #environment:
-    # Defines the two ways Kafka can be reached
-    #  KAFKA_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://0.0.0.0:9092
+    environment:
+      # --- Node and Role Configuration ---
+      KAFKA_NODE_ID: 1
+      KAFKA_PROCESS_ROLES: broker,controller
       
-      # Advertises the two addresses to clients
-    #  KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+      # --- Listener Configuration ---
+      # Tells Kafka to listen on 9092 (PLAINTEXT) and 9093 (CONTROLLER)
+      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
       
-      # Listener names for internal Docker networking
-    #  KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-    #  KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-
+      # Advertises the accessible address to clients
+      # WARNING: Use the internal Docker service name (e.g., 'kafka') instead of 'localhost' 
+      # for multi-container setups. Since this is a single node, we'll keep the original 'localhost' 
+      # but be aware of the internal networking implications.
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092 
+      
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      
+      # --- KRaft Quorum Configuration (Single Node) ---
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@localhost:9093
+      
+      # --- Topic/Replication Configuration ---
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_NUM_PARTITIONS: 3
 
   # ----------------------------------------
   # 3. Redis Server
